# elasticsearch-sensor-dashboard

./: .gitignore  Dockerfile  Dockerfile.setup  README.md  SETUP.md  airqualitysensor_data.csv  check_dependencies.py  docker-compose.yml  ingest_bulk_to_elasticsearch.py  install_dependencies.sh  kibana_setup.py  kibana_telemetry_dashboard.json  main.py  pyproject.toml  replit.nix  requirements-elasticsearch.txt  sample_data_generator.py  setup_elasticsearch.py  temperaturesensor_data.csv  verify_elasticsearch_setup.py
attached_assets/: Pasted-Elastic-Data-Stream-Setup-for-Temperature-and-Air-Quality-Sensors-1-Overview-This-document-outlin-1744705166379.txt
helm-chart/: Dockerfile  Dockerfile.init  README.md
helm-chart/elasticsearch-sensor-dashboard/: Chart.yaml  README.md  requirements.yaml  values.yaml
helm-chart/elasticsearch-sensor-dashboard/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  data-transfer-job.yaml  deployment.yaml  ingress.yaml  init-job.yaml  pvc.yaml  secrets.yaml  service.yaml
init-scripts/: setup-elasticsearch.sh
static/: kibana_telemetry_dashboard.json
templates/: base.html  dashboard.html  index.html
